# rtos

./: .gitignore  Lab_2_solution_RISCV_pyeatt.tgz  Lab_4_code.tgz  gdb.sh  nexys_riscv_openocd.cfg  software.tgz  vga_controller.tgz
Harp_new_RISCV/: CMSIS  CMakeCache.txt  CMakeLists.txt  Makefile
Harp_new_RISCV/ANSI/: Makefile  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcutil.c
Harp_new_RISCV/ANSI/drivers/: ANSI_terminal.c
Harp_new_RISCV/ANSI/drivers/FreeRTOS/: UART_16550.h
Harp_new_RISCV/Karplus-Strong/: #ks.c#  generate_KS  generate_KS.c  ks.c  ks.c.old  ks.h.old  midi_table.txt
Harp_new_RISCV/MIDI_PMOD/MIDI_PMOD/: MIDI_PMOD-B_Cu.gbr  MIDI_PMOD-B_Mask.gbr  MIDI_PMOD-Edge_Cuts.gbr  MIDI_PMOD-F_Cu.gbr  MIDI_PMOD-F_Mask.gbr  MIDI_PMOD-F_Silkscreen.gbr  MIDI_PMOD-NPTH.drl  MIDI_PMOD-PTH.drl  MIDI_PMOD-job.gbrjob  MIDI_PMOD.kicad_pcb  MIDI_PMOD.kicad_prl  MIDI_PMOD.kicad_pro  MIDI_PMOD.kicad_sch  MIDI_PMOD_BOM.xlsx  fp-info-cache  fp-lib-table  sym-lib-table
Harp_new_RISCV/MIDI_PMOD/MIDI_PMOD/libraries/: 61PC5FS.kicad_sym  61PC5FS.step  SWITCHCRAFT_61PC5FS.kicad_mod
Harp_new_RISCV/MIDI_PMOD/MIDI_PMOD/libraries/KiCADv6/: 2025-11-09_00-12-52.kicad_sym
Harp_new_RISCV/MIDI_PMOD/MIDI_PMOD/libraries/KiCADv6/footprints.pretty/: CONN5_5212044-1_TEC.kicad_mod
Harp_new_RISCV/Microblaze_V/: #MTIME.c#  interrupts.c  trap_handler.S  trap_handler.s
Harp_new_RISCV/Microblaze_V/xil/: CMakeLists.txt  bsp.yaml  microblaze_riscv_toolchain.cmake
Harp_new_RISCV/Microblaze_V/xil/hw_artifacts/: microblaze_riscv_0_baremetal.dts  sdt.dts
Harp_new_RISCV/Microblaze_V/xil/include/: distro.conf  ip_drv_map.yaml  libxil.conf
Harp_new_RISCV/include/: #FreeRTOSConfig.h#  LDP-001_PM_driver.h  audio_backend.h  device_addrs.h  music.h  songs.h  stats_task.h
Harp_new_RISCV/scripts/: report_sections.sh
Harp_new_RISCV/src/: #ks.c#  LDP-001_PM_driver.c  audio_backend.c  gcc_RISCV.ld  gcc_arm.ld  ks.c  ks.h  main.c  music.c  songs.c  startup_ARMCM3.S  stats_task.c
Lab_2_code/: CMSIS  CMakeCache.txt  CMakeLists.txt  FreeRTOS  Makefile  compile_commands.json
Lab_2_code/include/: FreeRTOSConfig.h
Lab_2_solution_RISCV_pyeatt/: CMakeCache.txt  CMakeLists.txt  Makefile  Ozone.jdebug  Ozone_Registers_1_260425.csv  lab_2.jdebug
Lab_2_solution_RISCV_pyeatt/RISCV_pyeatt/: irq.S  newlib_functions.S
Lab_2_solution_RISCV_pyeatt/include/: AXI_timer.h  FreeRTOSConfig.h  device_addrs.h  hello_task.h  uart.h
Lab_2_solution_RISCV_pyeatt/scripts/: catch_text_corruption.gdb  dump_logs.gdb  report_sections.sh
Lab_2_solution_RISCV_pyeatt/src/: AXI_timer.c  gcc_RISCV.ld  gcc_arm.ld  hello_task.c  main.c  stats_task.c  uart.c
Lab_3_code/: CMakeCache.txt  Makefile  compile_commands.json
Lab_3_code/include/: echo_task.h
Lab_3_code/src/: echo_task.c
RTOS_Doom/: CMakeCache.txt  CMakeLists.txt  FreeRTOS-Plus-Fat  Makefile  README.md  RTOS_Doom.map  cmake_install.cmake  compile_commands.json  output.txt
RTOS_Doom/Microblaze_V/xil/include/: xmem_config.h  xparameters.h
RTOS_Doom/RISCV_pyeatt/: PM_isr.S  SD_isr.S  UART_isr.S  VGA_isr.S  interrupts.c  newlib_functions.S  riscv_invalidate_dcache_range.S  riscv_misalign_shim.S  startup_RISCV_pyeatt.S
RTOS_Doom/debug/: gdb_proxy.py  hw_server_init.tcl  stop_debug_chain.sh
RTOS_Doom/include/: AXI_timer.h  FreeRTOSConfig.h  FreeRTOSFATConfig.h  UART_16550.h  doom_task.h  doomgeneric_freertos.h  hello_task.h  interrupts.h  sd_driver.h  stats_task.h  vga_driver.h
RTOS_Doom/scripts/: report_sections.sh
RTOS_Doom/src/: AXI_timer.c  UART_16550.c  doom_task.c  doomgeneric_freertos.c  gcc_RISCV.ld  gcc_arm.ld  main.c  newlib_fs.c  newlib_functions.c  startup_RISCV.S  stats_task.c  vga_isr.c
RTOS_Doom/src/doomgeneric/: doomgeneric.c  doomgeneric.h  i_video.c  i_video.h
RTOS_Doom/src/sd_driver/: sd_driver_isr.c  sd_fat_disk.c
doom_input/: main.py
doom_vitis/_ide/: workspace_journal.py
doomloader/: CMakeCache.txt  CMakeLists.txt  FreeRTOS  Makefile  README.txt  ozone.jdebug
doomloader/Microblaze_V/: interrupts.h  startup_RISCV.S  trap_handler.S
doomloader/RISCV_pyeatt/: AXI_isr.S  irq.h  riscv_flush_dcache_range.S  startup_RISCV_pyeatt.S
doomloader/debug/: start_debug_chain.sh
doomloader/include/: AXI_timer.h  FreeRTOSConfig.h  UART_16550.h  device_addrs.h  hello_task.h  irq.h  load_task.h  sd_driver.h  sd_driver_private.h  sd_fat_disk.h
doomloader/src/: AXI_timer.c  UART_16550.c  gcc_RISCV.ld  hello_task.c  load_task.c  main.c
hello_world/: Makefile  hello.S  hello.coe  hello.elf  hello.hex  hello.jdebug  hello.mem  link.ld  vivado.jou
lab_1/: CMakeCache.txt  Makefile  compile_commands.json
lab_2/: CMakeCache.txt  CMakeLists.txt  Makefile  compile_commands.json
lab_2/include/: AXI_timer.h  FreeRTOSConfig.h  hello_task.h  stats_task.h
lab_2/src/: AXI_timer.c  hello_task.c  main.c  startup_ARMCM3.S  stats_task.c  uart.c
lab_3/: CMakeCache.txt  CMakeLists.txt  Makefile  compile_commands.json
lab_3/include/: FreeRTOSConfig.h  hello_task.h
lab_3/src/: UART_16550.c  hello_task.c  main.c
software/sd_driver_RISCV/: CMakeLists.txt  Makefile
software/sd_driver_RISCV/src/: main.c  (+5 more)
software/sd_fat_RISCV/: CMakeCache.txt  CMakeLists.txt  FreeRTOS-Plus-FAT  Makefile  SETUP.txt
software/sd_test_RISCV/: CMakeLists.txt  FreeRTOS  Makefile
vga_controller/: preferred_architecture_constraints.txt  utilization.rpt
vga_controller/FreeRTOS_640x400/: CMakeLists.txt  ozone.jdebug
vga_controller/FreeRTOS_db/: CMakeLists.txt  FreeRTOS  ozone.jdebug  vga_manual.tex
vga_controller/manual/: MANUAL_BUILD.md  Makefile  vga_manual.tex
vga_controller/new_design/: axi_mem_arbiter.vhdl  axi_peripheral_bus.vhdl  axi_read_datapath.vhdl  axi_read_fsm.vhdl  axi_slave.vhdl  axi_write_datapath.vhdl  axi_write_fsm.vhdl  framebuffer_bram.vhdl  generic_reg_bank.vhdl  interrupt_controller.vhdl  palette_ram.vhdl  register_bank.vhdl  vga_controller.vhdl  vga_controller_core.vhdl  vga_controller_tb_comprehensive.vhdl  vga_generic_register.vhdl  vga_hv_counters.vhdl  vga_pixel_pipeline.vhdl  vga_pkg.vhdl  vga_timing_gen.vhdl  vga_unsigned_register.vhdl
(+127 files in other folders)
